# TranquilityClient-SDK

./: CMakeLists.txt  README.md
Curl-7.76.0/Win64/: libcurldebug.lib
include/: auth.h  base_object.h  cache.h  client.hpp  errors.h  includes.h  networking.hpp
include/core/: channels.cpp  channels.h  guild.h  user.h
lib src/SKD-Test/: SKD-Test.cpp  SKD-Test.vcxproj  SKD-Test.vcxproj.filters  main.cpp
lib src/TranquilityClient-SDK/: HTTPRequest.h  TranquilityClient-SDK.cpp  TranquilityClient-SDK.sln  TranquilityClient-SDK.vcxproj  TranquilityClient-SDK.vcxproj.filters  auth.cpp  auth.h  baseObject.hpp  cache.hpp  channel.hpp  client.h  config.hpp  includes.hpp  logging.hpp  networking.hpp  structs.h  structs.hpp
lib src/TranquilityClient-SDK/Curl-7.76.0/Win32/: libcurl.lib  libcurldebug.lib
lib src/TranquilityClient-SDK/Curl-7.76.0/Win64/: libcurl.lib
lib src/TranquilityClient-SDK/networking/: structs.h
src/: auth.cpp  cache.cpp  client.cpp  guild.cpp  networking.cpp  user.cpp
test/: main.cpp
